--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         tools:targetApi="31">
 
         <activity android:name=".ReportGarbageActivity"/>
+        <activity android:name=".ResultsActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
